[package]
name = "torrent_search"
version = "0.1.0"
authors = ["William Batista <bootlegbilly@protonmail.ch>"]
license = "MIT"
description = "An unofficial torrent searching library in Rust"
homepage = "https://github.com/billyb2/torrent-search-rs"
repository = "https://github.com/billyb2/torrent-search-rs"
readme = "README.md"
categories = ["web-programming", "parsing"]
keywords = ["torrent", "search", "l337x", "l337x.to"]
edition = "2018"

[dependencies]
lazy_static = "1"
regex = "1"
minreq = { version = "2", features = ["https-rustls"] }
unicode-segmentation = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
